--- a/css/josh.css
+++ b/css/josh.css
@@ -1,5 +1,7 @@
-.input{
-    width: 25%;
-    height: 10%;
-    font-size: 0.5rem;
+.box {
+  width: 150px;
+  height: 100px;
+  padding: 10px;
+  border: 5px solid rgb(69, 69, 69);
+  margin: 0;
 }
