--- a/css/abdullah.css
+++ b/css/abdullah.css
@@ -1,1 +1,65 @@
-/* This is css file for index.html */
+body {
+	text-align: center;
+	background-color: hsl(0, 0%, 98%);
+	color: #333;
+	font: 100% / normal sans-serif;
+}
+
+main {
+	padding: 4rem 0;
+	width: 90%;
+	max-width: 60rem;
+}
+
+form {
+	box-sizing: border-box;
+	padding: 2rem;
+	border-radius: 1rem;
+	background-color: hsl(0, 0%, 100%);
+	border: 4px solid hsl(0, 0%, 90%);
+	display: inline-block;
+	grid-template-columns: 1fr 1fr;
+	gap: 2rem;
+}
+
+/* CSS */
+button {
+	background-color: #0095ff;
+	border: 1px solid transparent;
+	border-radius: 3px;
+	box-shadow: rgba(255, 255, 255, 0.4) 0 1px 0 0 inset;
+	box-sizing: border-box;
+	color: #fff;
+	cursor: pointer;
+	display: inline-block;
+	font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
+		sans-serif;
+	font-size: 13px;
+	font-weight: 400;
+	line-height: 1.15385;
+	margin: 0;
+	outline: none;
+	padding: 8px 0.8em;
+	position: relative;
+	text-align: center;
+	text-decoration: none;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	vertical-align: baseline;
+	white-space: nowrap;
+}
+
+button:hover,
+button:focus {
+	background-color: #07c;
+}
+
+button:focus {
+	box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
+}
+
+button:active {
+	background-color: #0064bd;
+	box-shadow: none;
+}
